# ruzhouxie

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE of magic-cpp.txt  LICENSE.txt  README.md  code_generate.py  generate.py  ruzhouxie-github.h
docs/: guid.md  headers.md  relayout.md  utility.md
docs/headers/: adaptor_closure.md  array.md  child.md  general.md  tuple.md
docs/headers/child/: child_count.md
docs/headers/tuple/: fwd_as_tuple.md  get.md  make_tuple.md  operator_cmp.md  tuple.md
docs/headers/tuple/tuple/: deduction_guides.md  get.md  tuple_element.md  tuple_size.md
docs/heterogeneous/: child.md  child_count.md
docs/utility/: array.md  choice_t.md  custom_t.md  derived_from.md  guid.md  size_t.md  tuple.md
docs/utility/array/: data.md  operator_at.md  size.md
docs/utility/tuple/: deduction_guides.md  fwd_as_tuple.md  get.md  guid.md  make_tuple.md  operator_cmp.md  tuple_element.md  tuple_size.md
example/: auto-move.cpp  basic_adaptors.cpp  enumerate.cpp  gcctest.cpp  general.cpp  invoke.cpp  lifetime.cpp  optimize.cpp  performance_test.cpp  processer.cpp  quat.cpp  tensor.cpp  test.cpp  test_tool.h  tree_adaptor.cpp  tuple.cpp
include/ruzhouxie/: adaptor_closure.hpp  adaptors.h  array.h  array.hpp  astrict.hpp  basic_adaptors.h  child.hpp  constant.h  constant.hpp  enumerate.h  evaluate.h  general.h  general.hpp  get.h  id.h  invoke.h  invoke.hpp  invoke2.h  invoke3.h  macro_define.h  macro_define.hpp  macro_undef.h  macro_undef.hpp  make.hpp  math.h  math.hpp  pipe_closure.h  processer.h  quat.h  range.h  range.hpp  relayout.h  relayout.hpp  relayout_seperate.hpp  restrict.hpp  result.h  ruzhouxie.h  settings.h  simplify.hpp  slice.h  (+11 more)
include/ruzhouxie/code_generate/: aggregate_getter_invoker.code  tuple_specialization.code
include/ruzhouxie/generate/: aggregate_getter_invoker.code  tuple_specialization.code
test/: adaptor_closure.cpp  adaptors.cpp  array.cpp  astrict.cpp  auto-move.cpp  bacis_adaptors.cpp  basic_adaptors.cpp  child.cpp  enumerate.cpp  evaluate.cpp  general.cpp  get.cpp  id.cpp  invoke.cpp  lifetime.cpp  make.cpp  optimize.cpp  pipe_closure.cpp  processer.cpp  quat.cpp  relayout.cpp  restrict.cpp  result.cpp  simplify.cpp  tape.cpp  tensor.cpp  test_tool.h  test_tool.hpp  transform.cpp  tree_adaptor.cpp  tree_basic.cpp  tuple.cpp  view_interface.cpp
test/ignore/: invoke.cpp
